[package]
name = "gicopy"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/Antosser/gicopy"
description = "Copies a directory to another location, ignoring files listed in .gitignore files"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.18"
